home section fixed; removed overflow hidden

--- a/src/styles/helpers/templateLayout/common.css
+++ b/src/styles/helpers/templateLayout/common.css
@@ -1,7 +1,5 @@
 .template {
     position: relative;
-
-    overflow: hidden;
 }
 
 .template-layout__figure-container {
