--- a/src/styles/home/mobile.css
+++ b/src/styles/home/mobile.css
@@ -1,35 +1,24 @@
 @media screen and (--mobile-viewport) {
-    .home__image {
-        height: 72vw;
-        max-height: 270px;
-
-        transform: scale(1.35, 1.1) translate(10px, -1.5%);
-
-        background-image: url("assets/images/home/background_mobile.jpg");
-    }
-
-    .phone__image {
-        display: none;
-    }
-
     .home__container {
-        top: 25%;
+        flex-direction: column;
 
-        width: 100%;
-        height: 70%;
+        width: 320px;
+        padding: 65px 0 28px;
 
-        letter-spacing: 1px;
+        align-items: center;
+    }
+
+    .home__container-header {
+        margin-bottom: 28px;
     }
 
     #homeTitle {
-        width: 95%;
-        margin: 0 0 4vw;
+        margin-bottom: 14px;
 
         text-align: center;
+        letter-spacing: 0.6px;
 
-        font-size: 6.2rem;
-
-        align-self: center;
+        font-size: 18px;
     }
 
     #homeTitle::before,
@@ -49,35 +38,34 @@
     }
 
     #homeSubtitle {
-        top: 2.1%;
-        left: 16.3%;
+        letter-spacing: 0.4px;
 
-        letter-spacing: 1.6px;
-
-        font-size: 3.4rem;
+        font-size: 11px;
     }
-
 
     .home__controls {
         width: 90%;
-        margin: auto;
 
-        font-size: 5rem;
+        font-size: 11px;
     }
 
-    .home__controls .home__button {
+    .home__button {
         flex: 1 1 50%;
 
-        height: 16vw;
+        line-height: 24px;
     }
 
     #createEvent {
-        margin-right: 7%;
+        margin-right: 20px;
 
         flex-shrink: 1.3;
     }
 
     .home__controls-pair {
         flex: 1.2 1 63%;
+    }
+
+    .phone__image {
+        display: none;
     }
 }
