--- a/src/styles/howItWorks/common.css
+++ b/src/styles/howItWorks/common.css
@@ -1,4 +1,6 @@
 #howItWorks {
+    position: relative;
+
     display: flex;
     flex-direction: column;
 
