--- a/src/styles/interaction/common.css
+++ b/src/styles/interaction/common.css
@@ -1,7 +1,5 @@
 #interaction {
     position: relative;
-
-    overflow: hidden;
 }
 
 .interaction__card-item {
