--- a/src/styles/partners/common.css
+++ b/src/styles/partners/common.css
@@ -1,8 +1,6 @@
 #partners {
     position: relative;
 
-    overflow: hidden;
-
     width: 100%;
 }
 
